doctrine mapping and fixtures nullobject for match result

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,6 +59,14 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        mappings:
+            Mogo:
+                type: annotation
+                dir: '%kernel.project_dir%/src/Mogo'
+                is_bundle: false
+                prefix: Mogo
+                alias: Mogi
+
 
 # Swiftmailer Configuration
 swiftmailer:
