--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": ">=7.1",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/jsrouting-bundle": "^2.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "ramsey/uuid-doctrine": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
